--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/martinrajdl/npm-i-hook#readme",
   "devDependencies": {
+    "moment": "^2.24.0",
     "parcel-bundler": "^1.12.4"
   }
 }
