--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "lodash": "^4.17.15",
     "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "moment": "^2.24.0"
   }
 }
