--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
     "lodash": "^4.17.15",
     "parcel-bundler": "^1.12.4"
   },
-  "dependencies": {
-    "moment": "^2.24.0"
-  }
+  "dependencies": {}
 }
